# paint

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  resources.qrc
.cache/clangd/index/: canvas.cpp.0657C99A416626DF.idx  canvas.hpp.28FD332A3F7AA5FF.idx  i_tool.hpp.77077E5318A7AB2D.idx  main.cpp.38B29A1AA23A1E19.idx  mainwindow.cpp.0E1C8B34C6ED0D17.idx  mainwindow.hpp.83047321F5D443B1.idx  state.cpp.C960DD3CEAF1697C.idx  state.hpp.CD01F9C07C4F9693.idx
lib/about/: CMakeLists.txt  about.cpp  about.hpp  about.ui
lib/canvas/: CMakeLists.txt  canvas.cpp  canvas.hpp
lib/color_picker_panel/: CMakeLists.txt  colorpicker.cpp  colorpicker.hpp  colorpicker.ui
lib/common/: CMakeLists.txt  e_tool.hpp  i_tool.hpp  polygon_config.hpp  state.cpp  state.hpp  utils.hpp
lib/help/: CMakeLists.txt  help.cpp  help.hpp  help.ui
lib/lineconfig/: CMakeLists.txt  lineconfig.cpp  lineconfig.hpp  lineconfig.ui
lib/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
lib/paramwidget/: CMakeLists.txt  paramwidget.cpp  paramwidget.hpp  paramwidget.ui
lib/polygon/: CMakeLists.txt  polygondialog.cpp  polygondialog.hpp  polygondialog.ui
lib/resizedialog/: CMakeLists.txt  resizedialog.cpp  resizedialog.hpp  resizedialog.ui
lib/spinslider/: CMakeLists.txt  spinslider.cpp  spinslider.hpp  spinslider.ui
lib/stampconfig/: CMakeLists.txt  stampconfig.cpp  stampconfig.hpp  stampconfig.ui
lib/tools/: CMakeLists.txt  fill.cpp  fill.hpp  line.cpp  line.hpp  stamp.cpp  stamp.hpp
mainwindow/: mainwindow.cpp  mainwindow.hpp
